solved issue with layout shifting
Solved issue with layout shifting when providing verbose reasoning in frame description.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,11 @@
 html {
 	scroll-behavior: smooth;
 }
+
+code {
+	word-break: keep-all;
+}
+
+:target {
+	background-color: rgba(255, 255, 0, 0.3);
+}
